# CommandParser

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  TEST_Command.cpp  TEST_CommandManager.cpp  TEST_Package.cpp  TEST_Packge&CommandManager.cpp  main.cpp
SimpleStream/: SimpleStream.h
src/: CMakeLists.txt  Command.h  Command.hpp  CommandBase.cpp  CommandBase.hpp  CommandManager.h  CommandManager.hpp  CommandSender.cpp  CommandSender.h  CommandSet.cpp  CommandSet.hpp  ItemBase.cpp  ItemBase.hpp  Package.h  ParseBuffer.cpp  ParseBuffer.hpp  PrintManager.cpp  PrintManager.h  PrintManager.hpp  Shell.cpp  Shell.hpp  arguments_parser.cpp  command_manager.cpp  command_manager.h  cyclicBuffer.hpp  parser.cpp  parser.hpp
tests/: Stream.h  TEST_Command.cpp  TEST_CommandBase.cpp  TEST_CommandManager.cpp  TEST_CommandSender.cpp  TEST_CommandSet.cpp  TEST_ItemBase.cpp  TEST_Package&CommandManager.cpp  TEST_Package.cpp  TEST_PackageAndCommandManager.cpp  TEST_Parser.cpp  TEST_PrintManager.cpp  TEST_Shell.cpp  TEST_StreamCommandManager.cpp  helper.cpp  helper.hpp
